# ratatoskr

./: Cargo.toml  README.md  build.rs  flake.nix  result
docs/: agent-usage.md
schema/: rata.schema.json
src/: cli.rs  config.rs  docs.rs  doctor.rs  errors.rs  init.rs  main.rs  pack.rs  resolve.rs
tickets/: 1.md  ask-2026-07-15-ratatoskr-bootstrap.md  ask-2026-07-21-store-composition.md  ask-2026-07-21-version-output.md
