[package]
name = "ratatoskr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rata"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
